Setting up parse backend

--- a/gradle.properties
+++ b/gradle.properties
@@ -15,3 +15,5 @@ org.gradle.jvmargs=-Xmx2048m -Dfile.encoding=UTF-8
 # Android operating system, and which are packaged with your app"s APK
 # https://developer.android.com/topic/libraries/support-library/androidx-rn
 android.useAndroidX=true
+APPLICATION_ID="0Xi1YnzxCk526xE0j0OAUnTXqbB3e89D1XkhsiEt"
+CLIENT_KEY="VsjCPaZf3NZkAM6xZXrgVvHIV9Xz8gN38j0RnzIz"
