--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,4 +54,5 @@ dependencies {
     implementation 'com.google.android.material:material:1.1.0'
     implementation 'androidx.appcompat:appcompat:1.0.0'
     implementation "androidx.cardview:cardview:1.0.0"
+    implementation 'com.google.android.material:material:1.5.0-alpha01'
 }
