--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.finalapp">
+    package="com.example.wheeldeal">
 
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
@@ -14,20 +14,20 @@
     </queries>
 
     <application
-        android:name=".models.ParseApplication"
+        android:name="com.example.wheeldeal.models.ParseApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.FinalApp">
-        <activity android:name=".activities.ScheduleDatesActivity"></activity>
-        <activity android:name=".activities.EventDetailsActivity" />
-        <activity android:name=".activities.ScheduleTimesActivity" />
-        <activity android:name=".activities.EditCarActivity" />
-        <activity android:name=".activities.CarDetailsActivity" />
-        <activity android:name=".activities.UserCarFeedActivity" />
-        <activity android:name=".activities.RegisterCarActivity" />
+        android:theme="@style/Theme.WheelDeal">
+        <activity android:name="com.example.wheeldeal.activities.ScheduleDatesActivity"></activity>
+        <activity android:name="com.example.wheeldeal.activities.EventDetailsActivity" />
+        <activity android:name="com.example.wheeldeal.activities.ScheduleTimesActivity" />
+        <activity android:name="com.example.wheeldeal.activities.EditCarActivity" />
+        <activity android:name="com.example.wheeldeal.activities.CarDetailsActivity" />
+        <activity android:name="com.example.wheeldeal.activities.UserCarFeedActivity" />
+        <activity android:name="com.example.wheeldeal.activities.RegisterCarActivity" />
 
         <provider
             android:name="androidx.core.content.FileProvider"
@@ -39,15 +39,15 @@
                 android:resource="@xml/fileprovider" />
         </provider>
 
-        <activity android:name=".activities.SignUpActivity" />
-        <activity android:name=".activities.LoginActivity">
+        <activity android:name="com.example.wheeldeal.activities.SignUpActivity" />
+        <activity android:name="com.example.wheeldeal.activities.LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".MainActivity" />
+        <activity android:name="com.example.wheeldeal.MainActivity" />
     </application>
 
 </manifest>
