--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,11 +23,11 @@
         android:theme="@style/Theme.WheelDeal">
         <activity android:name="com.example.wheeldeal.activities.ScheduleDatesActivity"></activity>
         <activity android:name="com.example.wheeldeal.activities.EventDetailsActivity" />
-        <activity android:name="com.example.wheeldeal.oldactivities.ScheduleTimesActivity" />
+        <activity android:name="com.example.wheeldeal.oldclasses.ScheduleTimesActivity" />
         <activity android:name="com.example.wheeldeal.activities.EditCarActivity" />
         <activity android:name="com.example.wheeldeal.activities.CarDetailsActivity" />
         <activity android:name="com.example.wheeldeal.activities.UserCarFeedActivity" />
-        <activity android:name="com.example.wheeldeal.activities.RegisterCarActivity" />
+        <activity android:name="com.example.wheeldeal.activities.AddOwnCarActivity" />
 
         <provider
             android:name="androidx.core.content.FileProvider"
