--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,6 +8,7 @@ android {
 
     defaultConfig {
         applicationId "com.example.finalapp"
+        vectorDrawables.useSupportLibrary = true
         minSdkVersion 21
         targetSdkVersion 30
         versionCode 1
