Changed toolbar theme

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,6 +18,7 @@ android {
 
         buildConfigField("String", "APPLICATION_ID", APPLICATION_ID)
         buildConfigField("String", "CLIENT_KEY", CLIENT_KEY)
+        buildConfigField("String", "MAP_API_KEY", MAP_API_KEY)
     }
 
     buildTypes {
