--- a/gradle.properties
+++ b/gradle.properties
@@ -17,3 +17,4 @@ org.gradle.jvmargs=-Xmx2048m -Dfile.encoding=UTF-8
 android.useAndroidX=true
 APPLICATION_ID="0Xi1YnzxCk526xE0j0OAUnTXqbB3e89D1XkhsiEt"
 CLIENT_KEY="VsjCPaZf3NZkAM6xZXrgVvHIV9Xz8gN38j0RnzIz"
+MAP_API_KEY="AIzaSyAovoygC-bdUzZ_DDdctlRluM9rGu1nYog"
