Added delete button

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -70,4 +70,6 @@ dependencies {
     implementation "com.google.android.gms:play-services-location:$googlePlayVersion"
     implementation "org.permissionsdispatcher:permissionsdispatcher:$permissionDispatcherVersion"
     annotationProcessor "org.permissionsdispatcher:permissionsdispatcher-processor:$permissionDispatcherVersion"
+//    implementation 'com.github.hotchemi:permissionsdispatcher:3.1.0'
+//    annotationProcessor 'com.github.hotchemi:permissionsdispatcher-processor:3.1.0'
 }
