--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,7 +30,7 @@
         <activity android:name=".activities.CarculatorActivity"></activity>
         <activity android:name=".oldclasses.GoogleMapsActivity" />
         <activity android:name=".activities.ScheduleDatesActivity" />
-        <activity android:name=".activities.EventDetailsActivity" />
+        <activity android:name=".oldclasses.EventDetailsActivity" />
         <activity android:name=".oldclasses.ScheduleTimesActivity" />
         <activity android:name=".activities.SameAddressCarsActivity" />
         <activity android:name=".activities.EditCarActivity" />
